--- a/body.tex
+++ b/body.tex
@@ -519,8 +519,8 @@ decision.
 
 It is not required to break all \glspl{epic} down into stories before the \gls{cycle} begins: it may be more appropriate to first schedule a few exploratory stories and use them to inform the development of the rest of the \gls{epic}.
 However, do break \glspl{epic} down to describe the stories which will be worked in an upcoming sprint (\S\ref{sec:sprinting}) before the sprint starts.
-When doing so, you may wish to leave some spare time to handle emergent work (discussed in \S\ref{sec:bugs}).
-Every epic should contain \emph{at least} one story.
+When doing so, you may wish to leave some spare time to handle emergent work (discussed in \S\ref{sec:bucket}).
+Every epic should contain \emph{at least} one story with non-zero story points assigned.
 
 Note that there is no relationship enforced between the \gls{SP} total estimated for the \gls{epic} and the sum of the \glspl{SP} of its constituent stories.
 It is therefore possible to over- or under-load an \gls{epic}.
@@ -669,7 +669,7 @@ Available teams, and the associated managers, are listed in the \href{https://de
 Where there is uncertainty about which team should be responsible for a particular ticket, the “Data Production Management” team may be used to indicate that the \gls{AD} of Data Production is responsible for assigning the work.
 
 Please regularly monitor \gls{JIRA} for incomplete tickets and update them appropriately.
-Where tickets describe bugs or other urgent emergent work which cannot be deferred, refer to \S\ref{sec:bugs}.
+Where tickets describe bugs or other urgent emergent work which cannot be deferred, refer to \S\ref{sec:buket}.
 
 \subsection{Coordination Standup}
 \label{sec:sup}
