--- a/body.tex
+++ b/body.tex
@@ -255,7 +255,7 @@ The ratio of hours to \glspl{SP} remains constant, but the number of hours decre
              \item Possibly hold a workshop or meetings with ADs individually to review their milestones
              \item Enter in Smartsheet for impact analysis (schedule)
              \item Discuss at Ops-Exec; approval (of Smartsheet plan) given and recorded by Bob/Phil
-             \item Import all changes into Jira as approved in Smartsheet
+             \item Import all changes into \gls{JIRA} as approved in Smartsheet
           \end{itemize}
       \item Complete “Budget Scrub”
      \end{itemize}
@@ -275,7 +275,7 @@ The ratio of hours to \glspl{SP} remains constant, but the number of hours decre
          \item Collect requests in a google sheet or confluence page
          \item Enter in feasibility study in Smartsheet for impact analysis
          \item Discuss at Ops-Exec; approval (of Smartsheet plan) given and recorded by Bob/Phil
-         \item Import all changes into Jira as approved in Smartsheet
+         \item Import all changes into \gls{JIRA} as approved in Smartsheet
       \end{itemize}
    \end{itemize}
 \item December
@@ -356,7 +356,7 @@ L1, L2 and most L3 milestones are defined as part of the annual planning cycle, 
 
 During the year, it is sometimes necessary to create new milestones (primarily at Level 3) that were omitted during the earlier planning phase. In this case, the team leader or AD may create the \gls{JIRA} milestone directly, and alert the Program Coordinator to it for inclusion in the Smartsheet.
 
-The following Jira fields must be filled out when defining a new milestone:
+The following \gls{JIRA} fields must be filled out when defining a new milestone:
 \begin{itemize}
 \item The \texttt{Milestone Level}, ``1,'' ``2,'' or ``3.''
 % We will remove references to the RO Milestone ID and deprecate the mapping google sheet which inventories all the IDs, as well as removing the field from the Milestone Issue Type
@@ -370,7 +370,7 @@ Example: \textit{``V5 WBS workbook and Preliminary Cost Calculator implementatio
   Example: \textit{``Upgrade the WBS activity, labor and non-labor plans from V4 to V5 in order to capture a US DF at SLAC, a UK DF, and any other modifications needed, and estimate the corresponding budget.''}
   Note that while only a subset of L1 and L2 milestones are actually listed in the NOIRLab Program Operations Plan (POP), Rubin adopts the same structure for all its milestones.
 \item The \texttt{Due Date} is the latest date in the future by which the milestone needs to be reached.
-  This date should be before or the same as the milestone's parent milestone's ``Milestone Due Date'' as shown in the Smartsheet, or the ``Due Date'' of the parent milestone in Jira.
+  This date should be before or the same as the milestone's parent milestone's ``Milestone Due Date'' as shown in the Smartsheet, or the ``Due Date'' of the parent milestone in \gls{JIRA}.
 %\item The \texttt{Start Date} is the date when the work for the milestone should begin.
 %  This is the date that the Smartsheet will use in a visual comparison between the fraction of work completed and the fraction of time elapsed, to help track progress on the epics.
 \item In the \texttt{Linked Issues} field, create a \textit{``blocks''} link to the parent milestone to reflect how that milestone contributes to acheiving that milestone. 
@@ -435,7 +435,7 @@ Be aware that:
 
 Although it is possible---indeed, encouraged---to set the \texttt{assignee} field in \gls{JIRA} to the individual who is expected to carry out the bulk of the work in an \gls{epic}, this does not provide sufficient granularity for those cases when more than one person will be contributing.
 
-% I don't see how this is done in Jira - Assignee only takes user names.  Do we want to be able to track resources or loading?  How is DM doing this in Jira now?
+% I don't see how this is done in \gls{JIRA} - Assignee only takes user names.  Do we want to be able to track resources or loading?  How is DM doing this in \gls{JIRA} now?
 % In fact, it is only required to provide a staff assignment in terms of ``resource types'' (i.e. scientists, senior scientists, developers, senior developers, etc).
 % In practice, to ensure your team is evenly loaded, it is usually necessary to break it down to named individuals.
 
@@ -676,7 +676,6 @@ Where tickets describe bugs or other urgent emergent work which cannot be deferr
 
 \section{Tracking Progress and Standard Reporting Cycle}
 \label{sec:reporting-cycle}
- Cathy ?
 
 \subsection{Tracking Progress toward Milestones}
 \label{sec:track-progress}
