--- a/body.tex
+++ b/body.tex
@@ -2,7 +2,7 @@
 
 This document provides a guide to the \VRO\ approach to work management and annual planning.
 See the operations proposal RDO-018 for a description of the full scope and high level goals of the program.
-There is no formal \gls{EVMS} required from the funding Agencies (the National Science Foundation (NSF) and the Department of Energy (DOE) Office of Science) so activities are planned in detail on a semi-annual basis and effort towards that schedule of activities is tracked through an agile process.
+There is no formal \gls{EVMS} requirement from the funding Agencies (the National Science Foundation (NSF) and the Department of Energy (DOE) Office of Science) so activities are planned in detail on a semi-annual basis and effort towards that schedule of activities is tracked using agile tools.
 
 The annual planning process starts by setting high level milestones for the year, which are centered around releasing data to the public and major maintenance to the telescope system once we enter the phase of full survey operations.   
 In a six-month cycle, the Leadership Team builds a series of milestone activities that are discrete pieces of work within Departments and Teams to collectively deliver the high level milestones.  
@@ -24,7 +24,7 @@ In this document, we lay out the procedural details for how we define and carry 
 \label{sec:contacts}
 
 Rubin Observatory is a Program of NSF's NOIRLab.
-The Rubin Observatory \gls{Director} is Robert Blum, the Deputy \gls{Director} for NOIRLab is currently under recruitment, and the Deputy \gls{Director} for SLAC is Phil Marshall.
+The Rubin Observatory \gls{Director} is Robert Blum, the Rubin Deputy \gls{Director} for NOIRLab is currently under recruitment, and the Rubin Deputy \gls{Director} for SLAC is Phil Marshall.
 They are the first point of contact for all issues regarding project management within \RO Operations.
 
 The Head of Operations is Ranpal Gill and the Program Coordinator is Cathy Petry.
