Annual budget cycle text and figure (sandboxing etc)

--- a/body.tex
+++ b/body.tex
@@ -47,7 +47,7 @@ For SLAC, the POP informs SLAC's annual planning, which culminates in a Field Wo
 
 The FWP is delivered in June of the current fiscal year, and covers the federal budget request for the next two fiscal years.
 The FWP is previewed to SLAC management and DOE in February in advance of the final delivery in June.
-Because the POP for NSF and FWP for DOE are out of phase, Rubin does high level planning in early Q2 of the financial year (January and February).
+Because the POP for NSF lags the FWP for DOE by one year, and their submission dates differ by several months, Rubin does high level planning in early Q2 of the financial year (January and February) and plans 2 years ahead, as required for the SLAC FWP.
 Detailed activity planning, including defining smaller chunks of work as lower level milestones, continues though the year in advance of the next year.
 This detailed activity planning is the subject of this document.
 
@@ -651,28 +651,55 @@ Rubin will show progress on all L1 milestones and any L2 milestones called out i
 % ======================================================================
 \section{Annual Budget Planning}
 
-Preamble. Budget requests. Spending plan development.
+Rubin Operations are funded at approximately equal levels by the NSF and DOE. NSF funding is requested by NOIRLab through its 5-year renewal proposal process, and annual budgets submitted as part of the NOIRLab Program Operations Plan (POP). DOE funding is requested by SLAC in an annual Field Work Proposal (FWP). In this section we describe the annual cycle of budget development and spending planning.
 
-Annual cycle, two different funding sources and budget request mechanisms. 5-year proposal and FWP.
-Director's Office sets major milestones and issues departmental budget guidance, by end of April.
-Departments and Teams set minor milestones, scrub budget to propose spending plan by end of May.
-Director's Office adjusts and finalizes spending plan by end of June, for NOIRLab POP and DOE budget briefing.
-Statements of work for next-year contracts and MPOs due July.
-Teams then plan work against their milestones in September after collecting community input at PCW in August.
+This section defines and formalizes a ground-up process to
+prioritize the annual scope of the program,
+review and scrub budgets and performance,
+and develop, using Rubin's planning tools, a consolidated and detailed, cost estimate informed by the schedule milestones.
 
-Annual cycle illustration.
+It also describes our approach to risk-aware budgeting, and a process for reviewing and approving requests beyond baseline targets.
 
-Notes on major milestone setting and budget guidance development. Timing relative to annual JOR.
 
-Notes on scrub design.
-Suggestions re: remote vs in person.
-Early May pre-scrub within department to design activities and set L3 milestones in response to L2 milestones.
-Late May/early June scrub presentations to Director's Office, proposing changes in effort distribution, staffing, purchasing, risk analysis.
-Small deviations from budget guidance.
-Post-scrub spending plan development and cost calculation in RDO during June: this means updates to the planning tools (Appendix~\ref{sec:planning-tools}).
-Implement changes in lab budget models in July.
+\subsection{The annual budget planning cycle}
 
-Financial Reserves.
+Figure~\ref{fig:annual-cycle} illustrates the phases of Rubin Operations budget development and spending planning throughout the year.
+In April, following several months collecting high level and external budget information and implementing changes requested during the previous summer, the Director's Office sets major (Level 1 and some Level 2) milestones, and issues departmental budget guidance for the next two fiscal years.
+(Ideally, the Joint agency Operations status Review (JOR) would be held in early April, to provide external expert oversight of the plan.)
+The major milestones and budget are inserted into the draft NOIRLab POP and SLAC FWP.
+(Only the budget for the coming fiscal year is required for the POP.)
+
+In May, the Departments and Teams hold a series of meetings to set their minor (remaining Level 2 and Level 3) milestones, and ``scrub'' their budgets in order to propose their spending plans (to the Director's Office) by the end of May.
+Each department is given a ``sandbox'' workbook to work up during this period.
+This sandbox is initialized with the department's labor and non-labor plans (that were used in setting the budget), the current staffing plan, the progress against milestones in the current fiscal year, and the major milestones for the coming fiscal year.
+They are then invited to work this sandbox up with analysis of recent performance, and any changes they want to propose for the next fiscal year, based on the minor milestones and associated activities they want to prioritize.
+They are also invited to scrub their part of the risk register, and update their risk response plans in concert with their planned activities.
+
+Typically, each team works up its part of the sandbox mostly independently, and then presents it to the department's management team around mid-May in a sandbox pitch session.
+(A template slide deck for each team's pitch is provided by the Director's Office, to ensure that all aspects of the sandboxing exercise are addressed.)
+The teams then address the feedback they have been given by the management team, and then present their sandboxes to the other teams in the department and also the Directorate and Program Operations teams from the Director's Office at the sandbox workshop at the end of the month.
+This sandbox workshop at the end of May / beginning of June gives all the departments, including the Director's Office, a chance to review, and probe, the ground-up planning in each team.
+In most cases a team's proposed changes in effort distribution, staffing, and purchasing will either involve only small deviations from budget guidance, or stay within the ``box'' given to them.
+Teams may also coordinate their proposed changes so as to keep the department's overall spending plan within its budget.
+(This coordination may be facilitated by the department's management team, e.g.\ following the pitch sessions.)
+
+Following the Sandbox Workshop, the Director's Office adjusts and finalizes the overall spending plan by the end of June, in time for the submission of the NOIRLab POP, and SLAC's DOE budget briefing.
+This June period of post-sandbox spending plan development and cost calculation involves the Directors Office staff making updates to the planning tools (Appendix~\ref{sec:planning-tools}), with review by teh departmental management teams.
+
+The changes to the spending plan, once captured in the Rubin planning tools, are implemented in NOIRLab's and SLAC's lab-wide budget models in July.
+Statements of work for the next fiscal year's contracts and MPOs are straightforwardly derived from the scrubbed plans, for their July deadlines.
+
+The teams then plan work against their minor milestones in September, incorporating any community input they may have collected at the annual project and community workshop (PCW) in August.
+
+\begin{figure}[!ht]
+\includegraphics[width=0.95\linewidth]{figures/annual-budget-cycle.png}
+\caption{Annual budget planning cycle.}
+\label{fig:annual-cycle}
+\end{figure}
+
+
+\subsection{Risk-aware Budgeting}
+
 Preamble on motivation.
 Management reserve for unknown unknowns, contingency reserve for known unknowns (in the risk regsiter).
 Different guidelines from different agencies. DOE allows reserves to be built up and carried forward at SLAC, and used as both contingency and management reserve. DOE holds additional mgmt reserve centrally.
@@ -681,9 +708,11 @@ Risk-aware budgeting: cost impact analysis of Risk register informs level of con
 Additional 8\% management reserve at SLAC, often needed to bridge gaps in federal funding. Reserve maintenance is accounted for in DOE budget requests.
 Status of reserve planning and risk analysis.
 
-Requests Beyond Target
+
+\subsection{Requests Beyond Target}
+
 Mid-year. Typically to mitigate or address risks. Leads to draw on reserves. Process for evaluating.
- 
+
 
 % ======================================================================
 \section{Personnel}
