Fixed quotation marks

--- a/body.tex
+++ b/body.tex
@@ -362,7 +362,7 @@ The following \gls{JIRA} fields must be filled out when defining a new milestone
 % We will remove references to the RO Milestone ID and deprecate the mapping google sheet which inventories all the IDs, as well as removing the field from the Milestone Issue Type
 \item The \texttt{Summary} is also the milestone title, and is a concise description of when the milestone is reached.
 Example: \textit{``V5 WBS workbook and Preliminary Cost Calculator implementation complete.''}
-\item The \texttt{Milestone Activity} field is equivalent to the activity that will take place in order to produce the deliverable and meet the milestone.  It should contain a sentence outlining the activity to be performed in order for the milestone to be reached and the deliverable to be produced. In the POP document tables this is the "Activity".
+\item The \texttt{Milestone Activity} field is equivalent to the activity that will take place in order to produce the deliverable and meet the milestone.  It should contain a sentence outlining the activity to be performed in order for the milestone to be reached and the deliverable to be produced. In the POP document tables this is the ``Activity.''
   Examples include \textit{``Deliver Data Preview 0.1 (DP0.1)''} (an L1 milestone) and \textit{``DP0.1 Data Release: science-ready catalogs released from the IDF''} (an L2 milestone that belongs to it).
 \item The \texttt{Deliverable} is a very terse list of the deliverables needed to reach the milestone.
   Example: \textit{``V5 WBS workbook and Preliminary Cost Calculator.''}
