Fixed cross-ref to bucket epics section

--- a/body.tex
+++ b/body.tex
@@ -669,7 +669,7 @@ Available teams, and the associated managers, are listed in the \href{https://de
 Where there is uncertainty about which team should be responsible for a particular ticket, the “Data Production Management” team may be used to indicate that the \gls{AD} of Data Production is responsible for assigning the work.
 
 Please regularly monitor \gls{JIRA} for incomplete tickets and update them appropriately.
-Where tickets describe bugs or other urgent emergent work which cannot be deferred, refer to \S\ref{sec:buket}.
+Where tickets describe bugs or other urgent emergent work which cannot be deferred, refer to \S\ref{sec:bucket}.
 
 \subsection{Coordination Standup}
 \label{sec:sup}
