Modified annual timeline to match budget planning section

--- a/body.tex
+++ b/body.tex
@@ -235,55 +235,55 @@ The ratio of hours to \glspl{SP} remains constant, but the number of hours decre
 \subsection{Timeline for Annual Planning}
 \label{sec:annual-planning-timeline}
 
-% This might be a good place to discuss the linked timing of milestone development and budget scrubbing which I have a draft timeline here
+Our basic annual timeline is laid out below; for more detail on the budget planning and sandboxing, see Section~\ref{sec:annual-cycle}.
+
 \begin{itemize}
-\item January
+\item December-March: accumulate top-down input for next year budget and schedule.
    \begin{itemize}
-      \item Update budget tools with any major changes for NICRA proposal (Will have already updated RAS from Staffing Plan and Nonlabor for quarterly forecasting) in December
+      \item Update lab-wide budget models (RAS) from Staffing and Nonlabor plans, for quarterly forecasting (December, March).
+      \item Update budget tools with any major changes, for AURA NICRA proposal. Incorporate any changes in SLAC overhead rates and escalations.
+      \item Adjust major milestone dates as events unfold.
    \end{itemize}
 \item March
    \begin{itemize}
-      \item Update RAS from Staffing Plan (NOIRLab matrix leveling)
-      \item Update Nonlabor for quarterly forecasting
       \item Semi-annual process of planning epics and L3s for next six months
-      \item Good time for “Budget Scrub” in preparation for POP (how long does this take?)
    \end{itemize}
-\item Mid-April-End of May: POP process kicks off mid-April with good drafts of milestones and budget due end of May
+\item April-May: NOIRLab POP process and SLAC FWP development kick off mid-April, with major milestones and budget due end of May.
     \begin{itemize}
-       \item Next FY Milestone Review
+       \item Early April: set next FY major milestones
           \begin{itemize}
-             \item Have ADs review and/or add/edit in Confluence or a google sheet (Having them interact with Smartsheet was not effective)
-             \item Possibly hold a workshop or meetings with ADs individually to review their milestones
-             \item Enter in Smartsheet for impact analysis (schedule)
-             \item Discuss at Ops-Exec; approval (of Smartsheet plan) given and recorded by Bob/Phil
-             \item Import all changes into \gls{JIRA} as approved in Smartsheet
+             \item ADs review and/or add/edit major milestones
+             \item Discuss in Ops Exec
+             \item Implement changes in Smartsheet and \gls{JIRA}
           \end{itemize}
-      \item Complete “Budget Scrub”
-     \end{itemize}
-\item June
+       \item Late April: set next FY (and FY+2) budget:
+          \begin{itemize}
+            \item Early April: freeze planning tools (WBS and Cost Calculator)
+            \item Joint agency operations status review (JOR)
+            \issue RDO issues departmental budget guidance based on costed and reviewed plan.
+         \end{itemize}
+       \item May: next FY Sandboxing:
+         \begin{itemize}
+            \item Early May: Prepare and issue sandbox workbooks, one per department.
+            \item Early May Department management teams facilitate team-level sandbox pitches (including L2/L3 milestons, changes to spending plans)
+            \item Late May: Sandboxing Workshop, for all ops teams and Director's Office.
+       \end{itemize}
+\item June-July: implement sandboxed changes.
    \begin{itemize}
-      \item Update RAS from Staffing Plan (NOIRLab matrix leveling)
-      \item Update Nonlabor for quarterly forecasting
-      \item Final Labor and Nonlabor budget for POP
+      \item Implement proposed changes to Staffing Plan, Risk Register, JIRA/Smartsheet L2/L3 milestones
+      \item End of June: Final Labor and Nonlabor budget for NOIRLab POP
+      \item Update lab-wide budget models (RAS) from Staffing and Nonlabor plans, for quarterly forecasting.
+      \item July: derive next FY contract and MPO SOWs.
    \end{itemize}
 \item September
    \begin{itemize}
-      \item Update RAS from Staffing Plan (NOIRLab matrix leveling)
-      \item Update Nonlabor for quarterly forecasting
+      \item Update lab-wide budget models (RAS) from Staffing and Nonlabor plans, for quarterly forecasting.
       \item Semi-annual process of planning epics and L3s for next six months
-      \item Planning for 2nd half may trigger L1-L2 milestone changes needed in next FY
+      \item Planning for 2nd half may trigger major milestone changes needed in next FY:
       \begin{itemize}
-         \item Collect requests in a google sheet or confluence page
-         \item Enter in feasibility study in Smartsheet for impact analysis
-         \item Discuss at Ops-Exec; approval (of Smartsheet plan) given and recorded by Bob/Phil
-         \item Import all changes into \gls{JIRA} as approved in Smartsheet
+         \item Collect requests, study feasibility in Smartsheet
+         \item Discuss at Ops-Exec, import changes into \gls{JIRA} and Smartsheet
       \end{itemize}
-   \end{itemize}
-\item December
-   \begin{itemize}
-      \item Update RAS from Staffing Plan (NOIRLab matrix leveling)
-      \item Update Nonlabor for quarterly forecasting
-      \item Nonlabor changes needed for NICRA
    \end{itemize}
 \end{itemize}
 
@@ -700,6 +700,7 @@ Rubin will show progress on all L1 milestones and any L2 milestones called out i
 
 % ======================================================================
 \section{Annual Budget Planning}
+\label{sec:annual-cycle}
 
 Rubin Operations are funded at approximately equal levels by the NSF and DOE. NSF funding is requested by NOIRLab through its 5-year renewal proposal process, and annual budgets submitted as part of the NOIRLab Program Operations Plan (POP). DOE funding is requested by SLAC in an annual Field Work Proposal (FWP). In this section we describe the annual cycle of budget development and spending planning.
 
@@ -713,7 +714,7 @@ It also describes our approach to risk-aware budgeting, and a process for review
 
 \subsection{The annual budget planning cycle}
 
-Figure~\ref{fig:annual-cycle} illustrates the phases of Rubin Operations budget development and spending planning throughout the year.
+Figure~\ref{fig:annual-cycle} illustrates the phases of Rubin Operations budget development and spending planning throughout the year, as laid out in Section~\ref{sec:annual-planning-timeline}.
 In April, following several months collecting high level and external budget information and implementing changes requested during the previous summer, the Director's Office sets major (Level 1 and some Level 2) milestones, and issues departmental budget guidance for the next two fiscal years.
 (Ideally, the Joint agency Operations status Review (JOR) would be held in early April, to provide external expert oversight of the plan.)
 The major milestones and budget are inserted into the draft NOIRLab POP and SLAC FWP.
