Fixed issue/item typo

--- a/body.tex
+++ b/body.tex
@@ -260,7 +260,7 @@ Our basic annual timeline is laid out below; for more detail on the budget plann
           \begin{itemize}
             \item Early April: freeze planning tools (WBS and Cost Calculator)
             \item Joint agency operations status review (JOR)
-            \issue RDO issues departmental budget guidance based on costed and reviewed plan.
+            \item RDO issues departmental budget guidance based on costed and reviewed plan.
          \end{itemize}
        \item May: next FY Sandboxing:
          \begin{itemize}
